# bq24196-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  registers.rs
src/types/: fault.rs  mod.rs
