[package]
name = "bq24196"
version = "0.1.0"
authors = ["Jurgis Balciunas <chemicstry@gmail.com>"]
repository = "https://github.com/chemicstry/bq24196-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the BQ24196 battery controller"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
tock-registers = { version = "0.7", default-features = false }